<?xml version="1.0" encoding="UTF-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:shrinkColumns="*"
    android:stretchColumns="*" >

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" >

        
        <Button
            android:id="@+id/btnFamily"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnFamily" />

        <Button
            android:id="@+id/btnGroups"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onBtnGroupClick"
            android:text="@string/btnGroups" />
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center" >

        <Button
            android:id="@+id/btnTypOfProd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/btnTypOfProd" />

        <Button
            android:id="@+id/btnCurUnit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="onBtnCurUnitClick"
            android:text="@string/btnCurUnit" />
    </TableRow>

</TableLayout>